--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -102,7 +102,7 @@
 
 	                    <% else %>
 
-	                    	<img class="thumb1" src="/assets/common/nothumb.png" />
+	                    	<%= image_tag "common/nothumb.png", :class => "thumb1" %>
 
 	                    <% end %>
 
@@ -114,7 +114,7 @@
 
 		                <% else %>
 
-	                    	<img class="thumb2" src="/assets/common/nothumb.png" />
+	                    	<%= image_tag "common/nothumb.png", :class => "thumb2" %>
 
 	                    <% end %>
 
@@ -128,7 +128,7 @@
 
 		                <% else %>
 
-	                    	<img class="thumb3" src="/assets/common/nothumb.png" />
+	                    	<%= image_tag "common/nothumb.png", :class => "thumb3" %>
 
 	                    <% end %>
 
