--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -57,12 +57,12 @@
 	<div class="content-actions">
 <% if false %>
 		<button id="favbtn" class="btn">
-			<img src="/assets/binders/fav.png" />
+			<%= image_tag "binders/fav.png" %>
 			<div class="texter">Add to favorites</div>
 		</button>
 <% end %>
 		<button id="snapbtn" class="btn">
-			<img src="/assets/binders/snap.png" />
+			<%= image_tag "binders/snap.png" %>
 			<div class="texter">Snap to binder</div>
 		</button>
 
