--- a/app/assets/javascripts/facebox.js.erb
+++ b/app/assets/javascripts/facebox.js.erb
@@ -84,8 +84,8 @@
     settings: {
       opacity      : 0.2,
       overlay      : true,
-      loadingImage : '/assets/fbox/loading.gif',
-      closeImage   : '/assets/fbox/closelabel.png',
+      loadingImage : <%= asset_path "fbox/loading.gif" %>,
+      closeImage   : <%= asset_path "fbox/closelabel.png" %>,
       imageTypes   : [ 'png', 'jpg', 'jpeg', 'gif' ],
       faceboxHtml  : '\
     <div id="facebox" style="display:none;"> \
