--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -24,7 +24,7 @@
 	                    # is a file/link 
 	                 %> 
 
-					<% if get_binder_image(binder) == "<no image>" || get_binder_image(binder) == "/assets/placer.png" %>
+					<% if get_binder_image(binder) == "<no image>" || get_binder_image(binder) == asset_path("placer.png") %>
 
 	                  	<div class="folder-preview">
 							<div class="contype">
@@ -87,7 +87,7 @@
 	    		             </div>
 
 	    		          <div class="contype">
-	                      	<img src="/assets/binders/types/folder.png" style="width:24px" />
+	    		          	<%= image_tag "binders/types/folder.png", :style => "width:24px" %>
 	                      </div>
 
 
@@ -143,8 +143,7 @@
 			            <div class="reflink">
 
 			            	<% if binder.type == 1 %>
-
-			            		<img src="/assets/binders/file.png" style="margin-top:-3px;margin-right:1px" /><%= binder.files %> &bull; <%= number_to_human_size(binder.total_size) %>
+			            		<%= image_types "binders/file.png", :style => "margin-top:-3px;margin-right:1px" %><%= binder.files %> &bull; <%= number_to_human_size(binder.total_size) %>
 
 			            	<% elsif binder.format == 2  && !binder.current_version.embed %>
 
@@ -185,7 +184,7 @@
 			            	<% else %>
 
 				            	<button class="btn snapbtn">
-									<img src="/assets/binders/snap.png" />
+									<%= image_tag "binders/snap.png" %>
 									<div class="texter">Snap</div>
 								</button>
 
