remove snap button on public not signed in

--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -182,12 +182,12 @@
 						        </div>
 
 			            	<% else %>
-
-				            	<button class="btn snapbtn">
-									<%= image_tag "binders/snap.png" %>
-									<div class="texter">Snap</div>
-								</button>
-
+			            		<% if signed_in? %>
+					            	<button class="btn snapbtn">
+										<%= image_tag "binders/snap.png" %>
+										<div class="texter">Snap</div>
+									</button>
+								<% end %>
 					        <% end %>
 
 			            </div>
