--- a/app/assets/stylesheets/buttons/buttons.css.erb
+++ b/app/assets/stylesheets/buttons/buttons.css.erb
@@ -13,11 +13,11 @@ Enjoy
 	font-family: 'zocial';
 	font-style: normal;
 	font-weight: normal;
-	src: url('/assets/stylsheets/buttons/zocial-regular-webfont.eot');
-	src: url('/assets/stylsheets/buttons/zocial-regular-webfont.eot?#iefix') format('embedded-opentype'),
-		url('/assets/stylsheets/buttons/zocial-regular-webfont.woff') format('woff'),
-		url('/assets/stylsheets/buttons/zocial-regular-webfont.ttf') format('truetype'),
-		url('/assets/stylsheets/buttons/zocial-regular-webfont.svg#ZocialRegular') format('svg');
+	src: url('<%= asset_path "buttons/zocial-regular-webfont.eot" %>');
+	src: url('<%= asset_path "buttons/zocial-regular-webfont.eot?#iefix" %>') format('embedded-opentype'),
+		url('<%= asset_path "buttons/zocial-regular-webfont.woff" %>') format('woff'),
+		url('<%= asset_path "buttons/zocial-regular-webfont.ttf" %>') format('truetype'),
+		url('<%= asset_path "buttons/zocial-regular-webfont.svg#ZocialRegular" %>') format('svg');
 	unicode-range:U+0-U+10FFFF;
 }
 
