--- a/app/assets/stylesheets/strap.css.erb
+++ b/app/assets/stylesheets/strap.css.erb
@@ -164,7 +164,7 @@ body {
   line-height: 18px;
   color: #333333;
   background-color: #F6F6F6;
-  background: #F7F5F5 url(<%= asset_path "paper.jpg" %>) repeat;
+  background: #F7F5F5 url('<%= asset_path "paper.jpg" %>') repeat;
   padding-top: 54px;
   padding-bottom: 40px;
 }
