--- a/app/assets/stylesheets/home/pub/team.css.erb
+++ b/app/assets/stylesheets/home/pub/team.css.erb
@@ -1,5 +1,5 @@
 .splashback {
-  background-image: url(<%= asset_path "public/team/team.jpg" %>);
+  background-image: url('<%= asset_path "public/team/team.jpg" %>');
   background-repeat:no-repeat;
   background-position:center top; 
   background-color:#fff;
