Backend admin invites

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,4 @@
-<h2>app/views/applicants/<%= params[:action] %></h2>
+<h2>app/views/<%= params[:controller] %>/<%= params[:action] %></h2>
 <h2><%= params[:controller] %>#<%= params[:action] %></h2>
 
 <a href="/admin/viewapps">View Applicants</a><br />
