--- a/app/views/admin/choosefeatured.html.erb
+++ b/app/views/admin/choosefeatured.html.erb
@@ -1,4 +1,4 @@
-<h2>app/views/applicants/<%= params[:action] %></h2>
+<h2>app/views/<%= params[:controller] %>/<%= params[:action] %></h2>
 <h2><%= params[:controller] %>#<%= params[:action] %></h2>
 <br />
 <%= form_tag featured_path, :method => :post do %>
