--- a/app/views/admin/invites.html.erb
+++ b/app/views/admin/invites.html.erb
@@ -4,7 +4,7 @@
 <tr>
 <td>Sent By</td>
 <td>To</td>
-<td>Application</td>
+<td>Status</td>
 <td>Timestamp</td>
 <td>Status</td>
 </tr>
@@ -12,7 +12,11 @@
 <tr>
 <td><%= invitation.from == "0" ? "System" : "" %></td>
 <td><%= invitation.to %></td>
-<td><%= invitation.status %></td>
+<td>
+<% invitation.status.each do |x,y| %>
+
+<% end %>
+</td>
 <td><%= invitation.timestamp %></td>
 <td><%= invitation.status %></td>
 </tr>
