--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -1,6 +1,6 @@
 <h2>app/views/<%= params[:controller] %>/<%= params[:action] %></h2>
 <h2><%= params[:controller] %>#<%= params[:action] %></h2>
-
+<h2>User count: <%= @teachers.count %></h2>
 <table>
 <tr>
 <td>Name</td>
