--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -72,7 +72,7 @@ function closefBox() {
 // facebox form helpers
 function fbFormActLoader() {
 	$("input").blur();
-	$("#facebox").find('.showloader').append('<img src="/assets/miniload.gif" id="tempload" style="float:left;margin-right:10px;margin-top:4px" />');
+	$("#facebox").find('.showloader').append('<img src="<%= asset_path "miniload.gif" %>" id="tempload" style="float:left;margin-right:10px;margin-top:4px" />');
 }
 
 function fbFormActRevert() {
