--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -81,7 +81,7 @@
 </div>
 
 
-<%= if false %>
+<% if false %>
 <div class="announcer invitebox"><%= @invcount %>/5 Invites Used <a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Send invites</a></div>
 <% end %>
 
