--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,9 +1,10 @@
 <h2>app/views/<%= params[:controller] %>/<%= params[:action] %></h2>
 <h2><%= params[:controller] %>#<%= params[:action] %></h2>
 
-<!-- <a href="/admin/invite">Invite User</a><br /> -->
+<a href="/admin/invite">Invite User</a><br />
+<a href="/admin/sysinvlist">System Invite List</a><br />
 <a href="/admin/apps">Applicants</a><br />
 <a href="/admin/users">Users</a><br />
-<!-- <a href="/admin/invites">Invites</a><br /> -->
+<a href="/admin/invites">Invites</a><br />
 <a href="/admin/fpfeatured">Pick Front Page Binders</a><br />
 <a href="/admin/featured">Pick Featured Binders</a>
