--- a/app/views/layouts/_teacherlist.html.erb
+++ b/app/views/layouts/_teacherlist.html.erb
@@ -4,9 +4,11 @@
 	<div class="listitem">
 		<% if !t.info.nil? && !t.info.avatar.to_hash[:url].nil? #&& !t.info.avatar.empty? 
 			%>
+		<% if !(t.info.avatar.url.include? '/assets/') %>
 		<a href="<%= "/#{t.username}" %>">
-			<img src=<%= (t.info.avatar.url.include? '/assets/') ? 'http://static.cla.co/assets/placer-f92ebf1d40f6c0514181480e15cb3676.png' : t.info.avatar.thumb_md.url.to_s %> class="thumbster" />
+			<img src=<%= t.info.avatar.thumb_md.url.to_s %> class="thumbster" />
 		</a>
+		<% end %>
 		<% end %>
 		<div class="infowrap">
 			<div class="bigtitle">
