--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -12,7 +12,7 @@
 
 	<center>
 	<video id="<%= @binder.current_version.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264" poster="<%= @binder.current_version.video.posterurl %>" data-setup="{}">
-		<source src="<%= @binder.current_version.video.url) %>" type='video/mp4'>
+		<source src="<%= @binder.current_version.video.url %>" type='video/mp4'>
 	</video>
 	</center>
 
