--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -5,7 +5,7 @@
 <% elsif @binder.current_version.vidtype == "zen" %>
 
 	<center>
-	<video id="<%= @binder.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" width="<%= @binder.current_version.zendata["output"]["width"] %>" height="<%= @binder.current_version.zendata["output"]["height"] %>" poster="<%= @binder.current_version.video.posterurl %>" data-setup="{}">
+	<video id="<%= @binder.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" width="700" height="390" poster="<%= @binder.current_version.video.posterurl %>" data-setup="{}">
 		<source src="<%= @binder.current_version.video.url %>" type='video/mp4'>
 	</video>
 	</center>
