--- a/app/views/binders/zenframe.html.erb
+++ b/app/views/binders/zenframe.html.erb
@@ -6,8 +6,10 @@
 		<%= javascript_tag "_V_.options.flash.swf = '#{asset_path "video-js.swf"}'" %>
 	</head>
 	<body>
-	<video id="<%= @binder.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" width="700" height="390" poster="<%= @binder.current_version.video.posterurl.html_safe %>" data-setup="{}">
-		<source src="<%= @binder.current_version.video.url.html_safe %>" type='video/mp4'>
-	</video>
+		<div id="vid">
+			<video id="<%= @binder.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" poster="<%= @binder.current_version.video.posterurl.html_safe %>" data-setup="{}">
+				<source src="<%= @binder.current_version.video.url.html_safe %>" type='video/mp4'>
+			</video>
+		</div>
 	</body>
 </html>
