--- a/app/views/binders/zenframe.html.erb
+++ b/app/views/binders/zenframe.html.erb
@@ -7,9 +7,20 @@
 	</head>
 	<body>
 		<div id="vid">
-			<video id="<%= @binder.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" poster="<%= @binder.current_version.video.posterurl.html_safe %>" data-setup="{}">
+			<video id="<%= @binder.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" poster="<%= @binder.current_version.video.posterurl.html_safe %>" data-setup="{}" width="700" height="390">
 				<source src="<%= @binder.current_version.video.url.html_safe %>" type='video/mp4'>
 			</video>
 		</div>
 	</body>
+	<script type="text/javascript">
+$(document).ready(function() {
+
+$("<%= @binder.id.to_s %>").attr('width', $(document).width());
+$("<%= @binder.id.to_s %>").attr('height', $(document).height());
+$("<%= @binder.id.to_s %>").width($(document).width());
+$("<%= @binder.id.to_s %>").height($(document).height());
+
+
+});
+</script
 </html>
