--- a/app/views/binders/zenframe.html.erb
+++ b/app/views/binders/zenframe.html.erb
@@ -15,10 +15,10 @@
 	<script type="text/javascript">
 $(document).ready(function() {
 
-$("<%= @binder.id.to_s %>").attr('width', $(document).width());
-$("<%= @binder.id.to_s %>").attr('height', $(document).height());
-$("<%= @binder.id.to_s %>").width($(document).width());
-$("<%= @binder.id.to_s %>").height($(document).height());
+$("#<%= @binder.id.to_s %>").attr('width', $(document).width());
+$("#<%= @binder.id.to_s %>").attr('height', $(document).height());
+$("#<%= @binder.id.to_s %>").width($(document).width());
+$("#<%= @binder.id.to_s %>").height($(document).height());
 
 
 });
