--- a/app/views/binders/zenframe.html.erb
+++ b/app/views/binders/zenframe.html.erb
@@ -8,7 +8,7 @@
 			body, html {
 			overflow:hidden;
 			}
-			.v<%= @binder.id.to_s %>{
+			.vidobj{
 				position:fixed;
 				top:0;
 				left:0;
@@ -16,19 +16,16 @@
 		</style>
 	</head>
 	<body>
-		<video id="v<%= @binder.id.to_s %>" class="video-js vjs-default-skin" controls preload="auto" poster="<%= @binder.current_version.video.posterurl.html_safe %>" data-setup="{}" width="700" height="390">
+		<video id="vidobj" class="video-js vjs-default-skin" controls preload="auto" poster="<%= @binder.current_version.video.posterurl.html_safe %>" data-setup="{}" width="700" height="390">
 			<source src="<%= @binder.current_version.video.url.html_safe %>" type='video/mp4'>
 		</video>
 	</body>
 	<script type="text/javascript">
 		$(document).ready(function() {
-
-		$("#v<%= @binder.id.to_s %>").attr('width', $(document).width());
-		$("#v<%= @binder.id.to_s %>").attr('height', $(document).height());
-		$("#v<%= @binder.id.to_s %>").width($(document).width());
-		$("#v<%= @binder.id.to_s %>").height($(document).height());
-
-
+		$("#vidobj").attr('width', $(document).width());
+		$("#vidobj").attr('height', $(document).height());
+		$("#vidobj").width($(document).width());
+		$("#vidobj").height($(document).height());
 		});
 	</script>
 </html>
